# VESPA

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  vespa.code-workspace
data/: DMS39.fasta  DMS39_datasets_correlation.xlsx
models/: ProtT5cons_checkpoint.pt  VESPA-10LR_Cons_Blsm_Prob.pkl  VESPAl-10LR_Cons_Blsm.pkl
tests/: test_vespa.py
vespa/: __init__.py
vespa/predict/: config.py  conspred.py  embedding.py  logodds.py  utils.py  utils_t5.py  vespa.py
vespa/scripts/: __init__.py  conspred.py  embedding.py  logodds.py  meta.py  vespa.py  vespa_run.py
