[tool.poetry]
name = "vespa"
version = "0.1.0-beta"
description = ""
authors = ["Tobias O <tobias.olenyi@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
h5py = "^3.4.0"
numpy = "^1.21.2"
sklearn = "^0.0"
tqdm = "^4.62.2"
torch = "^1.9.0"
transformers = "^4.10.2"
sentencepiece = "^0.1.96"
biopython = "^1.79"
pyfaidx = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vespa_logodds = 'vespa.scripts.logodds:main'
vespa = 'vespa.scripts.vespa:main'
vespa_conspred = 'vespa.scripts.conspred:main'

[tool.poetry2conda]
name = "vespa-env"

[tool.poetry2conda.dependencies]
poetry2conda = { channel = "conda-forge" }
sentencepiece = { channel = "conda-forge" }
transformers = { channel = "conda-forge" }
torch = { channel = "conda-forge" }
sklearn = { channel = "conda-forge" }

