[tool.poetry]
name = "vespa-effect"
version = "1.0.0"
description = "Predictor for single-amino acid variant effects in protein sequences (https://doi.org/10.1007/s00439-021-02411-y)"
authors = ["Tobias O <tobias.olenyi@tum.de>", "Duc Anh Le <ducanh.le@tum.de>"]
license = 'AGPL-3.0-or-later'
readme = "README.md"
homepage = ""
repository = "https://github.com/Rostlab/VESPA"
keywords = [
    "Embeddings",
    "Protein-Sequences",
    "Machine-Learning",
    "Mutation-Effect"
]

include = [
    "LICENSE",
    "CODE_OF_CONDUCT.md",
     "models/*"
]
packages = [
    {include = "vespa"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
h5py = "^3.4.0"
numpy = "^1.21.2"
sklearn = "^0.0"
tqdm = "^4.62.2"
torch = "^1.9.0"
transformers = "^4.10.2"
sentencepiece = "^0.1.96"
biopython = "^1.79"
pyfaidx = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vespa_logodds = 'vespa.scripts.logodds:main'
vespa = 'vespa.scripts.meta:main'
vespa_conspred = 'vespa.scripts.conspred:main'
vespa_run = 'vespa.scripts.vespa_run:main'
vespa_emb = 'vespa.scripts.embedding:main'
